finished css styling

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Layout Demo</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- content goes here -->
     <header>
       <section>
-        <img src="http://placehold.it/100x75" alt="">
+        <img src="http://placehold.it/175x75" alt="">
 
         <nav>
           <ul>
@@ -23,7 +24,7 @@
     </header>
 
     <main>
-      <img class="main-banner" src="" alt="">
+      <img class="main-banner" src="http://placehold.it/960x450" alt="">
 
       <ul class="sub-banners">
         <li>
